update background day

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ video {
 }
 
 body {
-  background-image: url("background-day-opac.png");
+  background-image: url("background-day-opac35.png");
   background-size: 150px;
 }
 .container {
